Spacing and color fixes for services; font size fix for focus

--- a/styles/home.less
+++ b/styles/home.less
@@ -19,6 +19,17 @@
     padding-bottom: 1em;
 }
 
+#home-services .summary-item {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+#home-services .summary-title a,
+#home-services .summary-title a:hover {
+    color: #000;
+    text-decoration: none;
+}
+
 #home-services blockquote {
     color: #a44339;
     padding: 0;
@@ -61,7 +72,7 @@
     padding-left: 1.5em;
 }
 
-.focus .columns p span {
+.focus .columns p em {
     font-size: 1.25em;
 }
 
